--- a/makefile.inc
+++ b/makefile.inc
@@ -1,6 +1,7 @@
 SOURCE  := $(wildcard *.c)
 OBJS    := $(patsubst %.c, %.o, $(SOURCE))
 CC      := gcc
+CXX     := g++
 CFLAGS  := -Wall -Wno-strict-aliasing -Wno-uninitialized -g -rdynamic -std=gnu99
 LFLAGS  := -g -rdynamic
 
@@ -13,7 +14,7 @@ clean :
 	rm -rf *.d *.o $(TARGET)
 
 $(TARGET) : $(OBJS)
-	$(CC) $(LFLAGS) -o $@ $(OBJS) $(LIBS)
+	$(CXX) $(LFLAGS) -o $@ $(OBJS) $(LIBS)
 .c.o :
 	$(CC) $(CFLAGS) -c -o $@ $< $(INCS)
 
