--- a/matchengine/makefile
+++ b/matchengine/makefile
@@ -1,4 +1,4 @@
 TARGET  := matchengine.exe
-INCS = -I ../network -I ../utils
-LIBS = -L ../utils -lutils -L ../network -lnetwork -Wl,-Bstatic -lev -ljansson -lmpdec -lmysqlclient -lz -lrdkafka -lssl -lcrypto -lhiredis -Wl,-Bdynamic -lm -lpthread -ldl
+INCS = -I ../network -I ../utils -I ../../jansson/src -I ../../librdkafka/src
+LIBS = -L ../libs -Wl,-Bstatic -lutils -lnetwork -lhiredis -ljansson -lrdkafka -lev -lmpdec -lmysqlclient -lz -lssl -lcrypto -Wl,-Bdynamic -lm -lpthread -ldl
 include ../makefile.inc
