--- a/alertcenter/makefile
+++ b/alertcenter/makefile
@@ -1,4 +1,4 @@
 TARGET  := alertcenter.exe
-INCS = -I ../network -I ../utils
-LIBS = -L ../utils -lutils -L ../network -lnetwork -Wl,-Bstatic -lev -lhiredis -ljansson -lmpdec -lcurl -lssl -lcrypto -Wl,-Bdynamic -lm
+INCS = -I ../network -I ../utils -I ../../jansson/src -I ../../librdkafka/src
+LIBS = -L ../libs -Wl,-Bstatic -lutils -lnetwork -lhiredis -ljansson -lcurl -lev -lmpdec -lssl -lcrypto -Wl,-Bdynamic -lm
 include ../makefile.inc
