--- a/readhistory/config.json
+++ b/readhistory/config.json
@@ -5,7 +5,7 @@
         "core_limit": 1000000000
     },
     "log": {
-        "path": "/var/log/trade/readhistory",
+        "path": "/home/trader/Documents/tldae/viabtc_exchange_server/logs/readhistory",
         "flag": "fatal,error,warn,info,debug,trace",
         "num": 10
     },
@@ -24,8 +24,8 @@
     },
     "db_history": {
         "host": "localhost",
-        "user": "user",
-        "pass": "pass",
+        "user": "trader",
+        "pass": "Abcd1234",
         "name": "trade_history"
     },
     "worker_num": 10
