--- a/utils/makefile
+++ b/utils/makefile
@@ -1,5 +1,5 @@
 TARGET  := libutils.a
-INCS = -I ../network -I ../../jansson/src -I ../../librdkafka/src
+INCS = -I ../depends -I ../network -I ../../jansson/src -I ../../librdkafka/src
 include ../makefile.inc
 $(TARGET) : $(OBJS)
 	ar -rs $@ $^
