Update makefile of alertcenter

--- a/alertcenter/makefile
+++ b/alertcenter/makefile
@@ -1,4 +1,4 @@
 TARGET  := alertcenter.exe
-INCS = -I ../network -I ../utils -I ../../jansson/src -I ../../librdkafka/src
+INCS = -I ../depends -I ../network -I ../utils -I ../../jansson/src -I ../../librdkafka/src
 LIBS = -L ../libs -Wl,-Bstatic -lutils -lnetwork -lhiredis -ljansson -lcurl -lev -lmpdec -lssl -lcrypto -Wl,-Bdynamic -lm
 include ../makefile.inc
