Update makefile of matchengine

--- a/matchengine/makefile
+++ b/matchengine/makefile
@@ -1,4 +1,4 @@
 TARGET  := matchengine.exe
-INCS = -I ../network -I ../utils -I ../../jansson/src -I ../../librdkafka/src
-LIBS = -L ../libs -Wl,-Bstatic -lutils -lnetwork -lhiredis -ljansson -lrdkafka -lev -lmpdec -lmysqlclient -lz -lssl -lcrypto -Wl,-Bdynamic -lm -lpthread -ldl
+INCS = -I ../depends -I ../network -I ../utils -I ../../jansson/src -I ../../librdkafka/src
+LIBS = -L ../libs -Wl,-zmuldefs,-Bstatic -lutils -lnetwork -ljansson -lev -lmpdec -lmysqlclient -lrdkafka -lz -lssl -lcrypto -lhiredis -lcurl -Wl,-Bdynamic -lm -lpthread -ldl
 include ../makefile.inc
