Update makefile of readhistory

--- a/readhistory/makefile
+++ b/readhistory/makefile
@@ -1,4 +1,4 @@
 TARGET  := readhistory.exe
-INCS = -I ../network -I ../utils -I ../../jansson/src -I ../../librdkafka/src
+INCS = -I ../depends -I ../network -I ../utils -I ../../jansson/src -I ../../librdkafka/src
 LIBS = -L ../libs -Wl,-Bstatic -lutils -lnetwork -ljansson -lhiredis -lev -lmpdec -lmysqlclient -lz -Wl,-Bdynamic -lm -lpthread -ldl
 include ../makefile.inc
